# libgab

./: CMakeLists.txt  LICENSE
include/gab/: agent.hpp  agent_2d.hpp  agent_runner.hpp  agent_selector.hpp  bitwise_and_crossover.hpp  bitwise_not_mutation.hpp  chromosome.hpp  crossover.hpp  environment_2d.hpp  evaluation_pool.hpp  fitness_evaluator.hpp  mutation.hpp  one_point_crossover.hpp  population_transform.hpp  random_chromosome.hpp  real_distribution_mutation.hpp  serial_node.hpp  simulation.hpp  simulation_2d.hpp  thread_pool.hpp  timestep_result.hpp  two_point_crossover.hpp  uniform_crossover.hpp
src/: agent.cpp  agent_2d.cpp  agent_runner.cpp  bitwise_and_crossover.cpp  bitwise_not_mutation.cpp  chromosome.cpp  environment_2d.cpp  fitness_evaluator.cpp  one_point_crossover.cpp  random_chromosome.cpp  serial_node.cpp  simulation.cpp  simulation_2d.cpp  uniform_crossover.cpp
test/: CMakeLists.txt  simple.cpp  simulation_2d_test.cpp  simulation_test.cpp  worker.cpp
